<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_arrow_back"
        app:showAsAction="always"
        android:title="@string/backbutton"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:title="@string/add"/>
    <item
        android:id="@+id/fileToDB"
        android:icon="@drawable/ic_play_for_work_16"
        app:showAsAction="ifRoom"
        android:title="@string/import_from_file"/>
    <item
        android:id="@+id/recreate"
        android:icon="@drawable/ic_delete_forever_black_18dp"
        app:showAsAction="ifRoom"
        android:title="@string/reinitialize_database"/>
    <item
        android:id="@+id/globe"
        android:icon="@drawable/ic_public_black_18dp"
        app:showAsAction="always"
        android:title="Map Address"/>



</menu>