<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/IndividualLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/fieldnames"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstname"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/first_name"
                    />

                <TextView
                    android:id="@+id/lastname"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/last_name"
                    />

                <TextView
                    android:id="@+id/phonenumber"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/phone_number" />

                <TextView
                    android:id="@+id/birth1"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/birthday" />


                <TextView
                    android:id="@+id/firstContact"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/first_contact_date" />
                <TextView
                    android:id="@+id/address1"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/address_1" />
                <TextView
                    android:id="@+id/address2"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/address_2" />
                 <TextView
                    android:id="@+id/city"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/city" />
                <TextView
                    android:id="@+id/state"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/state" />
                <TextView
                    android:id="@+id/zip"
                    style="@style/fontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/zip_code" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/editFields"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/fname"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"/>

                <EditText
                    android:id="@+id/lname"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"/>


                <EditText
                    android:id="@+id/phone"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:digits="1234567890"
                    android:maxLength="10"
                    />

                <TextView
                    android:background="@drawable/contactborder"
                    android:clickable="true"
                    android:id="@+id/birth"
                    android:focusable="false"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />

                <TextView
                    android:id="@+id/contact"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/contactborder"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date" />
                <EditText
                    android:id="@+id/adr1"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"
                    />
                <EditText
                    android:id="@+id/adr2"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"
                    />
                <EditText
                    android:id="@+id/city_entry"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="25"
                    />
                <EditText
                    android:id="@+id/state_entry"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="2"
                    />
                <EditText
                    android:id="@+id/zip_entry"
                    style="@style/editStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IndividualLayout">

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="4dp"
            android:onClick="saveContact"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:onClick="saveContact"
            android:text="Delete"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="219dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>